# novel-tools-py

./: README.md  README_CN.md  add_to_calibre.py  analyze.py  analyze_config.json  calibre_convert.py  concatenate.py  concatenate_volume.py  conftest.py  create.py  create_config.json  default_matchers.json  docs.md  generate_list.py  generate_order.py  list_config.json  matchers.py  ntcli.py  pyproject.toml  requirements.txt  split.py  split_config.json  test.epub  utils.py  validators.py  volumes.py
.github/workflows/: python-app.yml
common/: __init__.py  acc.py  data.py  novel_data.py  text_reader.py  type.py
config/: create_config.json  create_dir_config.json  sample_metadata.json  split_config.json  struct_config.json  struct_dir_config.json
config/epub/: chapter_page.html  cover_page.html  cover_stylesheet.css  metadata_page.html  stylesheet.css  volume_page.html
docs/: design.md  references.md
framework/: __init__.py  processor.py  reader.py  worker.py  writer.py
novel_tools/common/: acc.py
novel_tools/framework/: __init__.py  builder.py  data.py  processor.py  reader.py  worker.py  writer.py
novel_tools/readers/: csv_reader.py  directory_reader.py  markdown_reader.py  metadata_json_reader.py  text_reader.py  toc_reader.py
novel_tools/toolkit/: __init__.py  analyze_novel.py  generate_docs.py
novel_tools/utils/: __init__.py  generate_objects.py  scan_stages.py
novel_tools/writers/: __structure_writer__.py  csv_writer.py  directory_writer.py  epub_writer.py  markdown_writer.py  text_writer.py  toc_writer.py
processors/matchers/: __aggregate_matcher__.py  csv_matcher.py  numbered_matcher.py  special_matcher.py  toc_matcher.py
processors/transformers/: order_transformer.py  path_transformer.py  pattern_transformer.py  title_transformer.py  type_transformer.py
processors/validators/: chapter_validator.py  validator.py  volume_validator.py
readers/: composite_directory_reader.py  composite_text_reader.py  csv_reader.py  directory_reader.py  markdown_reader.py  metadata_json_reader.py  text_reader.py  toc_reader.py
split/: __init__.py  list_generator.py  split.py  split_base.py  splitter.py  toc_lister.py
split/matchers/: __aggregate_matcher__.py  (+9 more)
tests/: helpers.py  utils.py
toolkit/: __init__.py  add_to_calibre.py  analyze.py  analyze_novel.py  calibre_convert.py  create.py  create_novel.py  generate_docs.py  generate_list.py  helpers.py
utils/: __init__.py  generate_objects.py  helpers.py  utils.py
volumes/: __init__.py  csv_volume.py  file_reader.py  json_volume.py  list_reader.py  read_volumes.py  volume_base.py
writers/: __structure_writer.py  __structure_writer__.py  csv_writer.py  directory_writer.py  epub_writer.py  file_writer.py  markdown_writer.py  text_writer.py  toc_writer.py
(+108 files in other folders)
