[tool.poetry]
name = 'novel_tools'
version = '0.3.0'
description = 'Python tools for formatting novels.'
authors = ['Yue Wu <wuyuejl97@gmail.com>']
license = 'WTFPL'
packages = [
    { include = 'novel_tools' },
]

[tool.poetry.dependencies]
python = '^3.10'
natsort = '^8.4.0'
Markdown = "^3.4.3"
beautifulsoup4 = "^4.12.2"
ebooklib = {git = "https://github.com/ALMSIVI/ebooklib"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-mock = '^3.11.1'
ruff = '^0.0.275'

[tool.poetry.scripts]
cli = 'ntcli:start'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.yapf]
based_on_style = 'pep8'
column_limit = 120
allow_split_before_dict_value = false

[tool.pytest.ini_options]
markers = [
    'slow: marks tests as slow',
    'data: requires input data',
    'args: requires args'
]