[project]
name = "novel_tools"
version = "0.3.0"
description = "Python tools for formatting novels."
authors = [{ name = "Yue Wu", email = "wuyuejl97@gmail.com" }]
requires-python = ">=3.10,<4"
license = "WTFPL"
dependencies = [
    "pydantic>=2.0,<3",
    "natsort>=8.4.0,<9",
    "Markdown>=3.4.3,<4",
    "beautifulsoup4>=4.12.2,<5",
    "ebooklib",
]

[project.scripts]
cli = "ntcli:start"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "pytest-mock>=3.11.1,<4",
    "ruff>=0.14.0,<0.15",
]

[tool.uv.sources]
ebooklib = { git = "https://github.com/ALMSIVI/ebooklib" }

[tool.hatch.build.targets.sdist]
include = ["novel_tools"]

[tool.hatch.build.targets.wheel]
include = ["novel_tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    'slow: marks tests as slow',
    'data: requires input data',
    'args: requires args'
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'
